--- a/version_1.ipynb
+++ b/version_1.ipynb
@@ -268,6 +268,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "27bd58e4",
+   "metadata": {},
+   "source": [
+    "### CPU"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "devoted-disposition",
@@ -303,6 +311,14 @@
     "\n",
     "z = my_add_mul(x,y)\n",
     "print(z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b23d2a1",
+   "metadata": {},
+   "source": [
+    "### Parallel"
    ]
   },
   {
@@ -342,11 +358,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d0f87219",
+   "metadata": {},
+   "source": [
+    "### GPU"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "south-apartment",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.04 ms ± 25.7 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
+      "[ 0.   1.5  3.   4.5 -1.  -1.  -1.  -1.  -1.  -1. ]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from numba import vectorize\n",
@@ -396,16 +429,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "uniform-yemen",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "test_my_add_mul (__main__.TestAddMulMethod) ... "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My_Target: cuda\n",
+      "Set My_Target to: cpu\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ok\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.000s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.main.TestProgram at 0x18611289b38>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import unittest\n",
     "import numpy as np\n",
     "\n",
     "print(\"My_Target:\", My_Target)\n",
     "My_Target = \"cpu\"\n",
+    "print(\"Set My_Target to:\", My_Target)\n",
     "\n",
     "class TestAddMulMethod(unittest.TestCase):\n",
     "\n",
@@ -748,7 +820,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
