--- a/version_1.ipynb
+++ b/version_1.ipynb
@@ -20,10 +20,11 @@
     "- Will probably output cryptic error message instead \n",
     "\n",
     "### but\n",
-    "- Must use arrays with defined types\n",
+    "- if we use datastructures with defined types (like numpy's ndarray)\n",
     "- with only a little effort and using arrays it can significantly speed up code\n",
     "- and even run it on the gpu or parallelize code\n",
-    "- create numpy like functions"
+    "- create numpy like functions\n",
+    "- Nvidia is supporting Numba to support their Cuda toolkit"
    ]
   },
   {
@@ -31,7 +32,7 @@
    "id": "upset-frontier",
    "metadata": {},
    "source": [
-    "## How numba works"
+    "## How Numba works"
    ]
   },
   {
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "first-colorado",
    "metadata": {},
    "outputs": [],
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "raising-filter",
    "metadata": {},
    "outputs": [
@@ -114,7 +115,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "27.2 µs ± 2.07 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "29.1 µs ± 1.91 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "thirty-princeton",
    "metadata": {},
    "outputs": [
@@ -179,8 +180,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1002.4253949092844\n",
-      "17.6 µs ± 1.24 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "1004.0626403318743\n",
+      "18.8 µs ± 1.72 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -209,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "touched-boards",
    "metadata": {},
    "outputs": [
@@ -217,7 +218,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "290 µs ± 39.6 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "232 µs ± 19.9 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -241,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# loop_numba.inspect_types()"
+    "loop_numba.inspect_types()"
    ]
   },
   {
@@ -277,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "devoted-disposition",
    "metadata": {},
    "outputs": [
@@ -285,8 +286,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "453 ns ± 10 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
-      "[ 0.   1.5  3.   4.5 -1.  -1.  -1.  -1.  -1.  -1. ]\n"
+      "[ 0.   1.5  3.   4.5 -1.  -1.  -1.  -1.  -1.  -1. ]\n",
+      "649 ns ± 44.3 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
      ]
     }
    ],
@@ -297,7 +298,7 @@
     "My_Target = 'cpu'\n",
     "\n",
     "# @vectorize\n",
-    "vectorize(['float32(float32, float32)'], target=My_Target)\n",
+    "@vectorize(['float32(float32, float32)'], target=My_Target)\n",
     "def my_add_mul(x,y):    # Elementwise!\n",
     "    temp = x + 0.5 * y\n",
     "    if temp > 5.0:\n",
@@ -307,10 +308,9 @@
     "\n",
     "x = np.arange(10, dtype=np.float32) # [0 1 2 3 4 5 6 7 8 9]\n",
     "y = np.arange(10, dtype=np.float32)\n",
-    "%timeit my_add_mul(x,y)\n",
     "\n",
-    "z = my_add_mul(x,y)\n",
-    "print(z)"
+    "print(my_add_mul(x,y))\n",
+    "%timeit my_add_mul(x,y)\n"
    ]
   },
   {
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "active-means",
    "metadata": {},
    "outputs": [
@@ -331,8 +331,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.18 µs ± 587 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "[ 0.   1.5  3.   4.5 -1.  -1.  -1.  -1.  -1.  -1. ]\n"
+      "[ 0.   1.5  3.   4.5 -1.  -1.  -1.  -1.  -1.  -1. ]\n",
+      "4.24 µs ± 1.44 µs per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
@@ -352,9 +352,8 @@
     "x = np.arange(10, dtype=np.float32) # [0 1 2 3 4 5 6 7 8 9]\n",
     "y = np.arange(10, dtype=np.float32)\n",
     "\n",
-    "%timeit my_add_mul_parallel(x,y)\n",
-    "z = my_add_mul_parallel(x,y)     # x_device and y_device are on the device already\n",
-    "print(z)"
+    "print(my_add_mul_parallel(x,y))\n",
+    "%timeit my_add_mul_parallel(x,y)\n"
    ]
   },
   {
@@ -401,9 +400,8 @@
     "# d_out = cuda.device_array_like(d_x)\n",
     "# d_out.copy_to_host()\n",
     "\n",
-    "%timeit my_add_mul_gpu(x,y)\n",
-    "z = my_add_mul_gpu(x,y)\n",
-    "print(z)"
+    "print(my_add_mul_gpu(x,y))\n",
+    "%timeit my_add_mul_gpu(x,y)\n"
    ]
   },
   {
@@ -525,15 +523,16 @@
     "from numba.core import types\n",
     "from numba.typed import Dict\n",
     "\n",
-    "@njit\n",
+    "# @njit\n",
+    "@jit(nopython=False)\n",
     "def main_numba_list():\n",
     "    l = []                       # compiler figures out the types\n",
     "    \n",
     "    for i in range(10):          # creates array\n",
     "        l.append(1)\n",
     "        \n",
-    "#     for i in range(10):        # mixing types gives compilation error\n",
-    "#         l.append(np.array([1,2]))\n",
+    "    for i in range(10):        # mixing types gives compilation error\n",
+    "        l.append(np.array([1,2]))\n",
     "    return l\n",
     "\n",
     "d = main_numba_list()\n",
@@ -594,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "id": "continued-missouri",
    "metadata": {},
    "outputs": [
@@ -603,7 +602,7 @@
      "output_type": "stream",
      "text": [
       "type(d):  <class 'numba.typed.typeddict.Dict'>\n",
-      "786 µs ± 23.4 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "1.97 ms ± 146 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -636,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "id": "informational-moldova",
    "metadata": {},
    "outputs": [
@@ -644,7 +643,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18.9 ms ± 627 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "42.6 ms ± 1.93 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -669,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "id": "thrown-olive",
    "metadata": {},
    "outputs": [
@@ -820,7 +819,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
